kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__app_server_guardian_review_timed_out_renders_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---







✗ Review timed out before kodex could run curl -sS -i -X POST --data-binary
  @core/src/kodex.rs https://example.com

• Working (0s • esc to interrupt)


› Ask Kodex to do anything

  GPT-5.6-Sol default · /tmp/project
