kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__catalog_model_session_header_resume.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 99
expression: rendered
---
OpenAI Kodex (v<VERSION>)
model: GPT-5.6 Luna high
directory: /tmp/thread-settings
